# FusionDB

./: Cargo.toml  Dockerfile  README.md  TECH_STACK.md  TODO.md  benchmark.py  fusion.wal  test_explain_wal  test_features.py  test_fts.py  test_hybrid.py  test_persistence_step1.py
.github/workflows/: ci.yml  release.yml
examples/: debug_ast.rs  debug_fts.rs
fusion.db/: db  snap.0000000000020A71
src/: lib.rs  main.rs  monitor.rs
src/catalog/: mod.rs
src/common/: encoding.rs  error.rs  mod.rs  value.rs
src/execution/: mod.rs  mod.rs_append  mod.rs_snippet  mod.rs_sort
src/parser/: mod.rs
src/server/: http_server.rs  mod.rs  pg_server.rs  tcp_server.rs
src/storage/: columnar.rs  fusion.rs  inverted_index.rs  lsm.rs  memory.rs  mod.rs  mvcc.rs  sled_store.rs  sstable.rs  vector_index.rs  wal.rs
tests/: pg_integration.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
