[package]
name = "fusiondb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1.11.0"
futures = "0.3.31"
pgwire = { version = "0.37.0", default-features = false, features = ["server-api"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sled = "0.34.7"
sqlparser = "0.60.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
bincode = "1.3.3"
moka = { version = "0.12.0", features = ["sync"] }
lazy_static = "1.5.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.0", features = ["json"] }
hdrhistogram = "7.5.4"
crossbeam-skiplist = "0.1.3"
crossbeam-utils = "0.8.21"
arrow = "57.1.0"
rand = { version = "0.9.2", features = ["std", "std_rng"] }
http = "1.4.0"
fastbloom = { version = "0.14.0", features = ["serde"] }
hora = "0.1.1"

[[bin]]
name = "fusiondb"
path = "src/main.rs"

[dev-dependencies]
env_logger = "0.11.8"
tokio-postgres = "0.7.15"
